Imporving swagger documentation, Fixing Movie listing filters
