# src/routes/MovieRoutes.ts
@@ -5,31 +5,32 @@ import {MovieFilterDTO} from "../dto/MovieDTO";
 import {plainToClass} from "class-transformer";
 import {authenticateMiddleware} from "../middleware/AuthenticationMiddleware";
 
-const { CREATED, OK} = StatusCodes;
+const {CREATED, OK} = StatusCodes;
 
 const router = express.Router();
 
 router.get("/:id", async (req, res) => {
-    const controller = new  MovieController();
+    const controller = new MovieController();
     const movie = await controller.getMovieDetails(parseInt(req.params.id));
     return res.status(OK).json(movie)
 });
 
 router.get("/",
     async (req, res) => {
-    const query: MovieFilterDTO = plainToClass(MovieFilterDTO, req.query)
-    const controller = new MovieController()
-    const movies = await controller.listMovies(query)
-    return res.status(OK).json(movies)
-})
+        const query: MovieFilterDTO = plainToClass(MovieFilterDTO, req.query)
+        const {entries, page, director, genre, title, actors} = query
+        const controller = new MovieController()
+        const movies = await controller.listMovies(entries, page, director, genre, title, actors)
+        return res.status(OK).json(movies)
+    })
 
 router.post("/",
     authenticateMiddleware('jwt', ['Admin']),
     async (req, res) => {
-    const controller = new MovieController();
-    const movie = await controller.registerMovie(req.body);
-    return res.status(CREATED).json(movie)
-});
+        const controller = new MovieController();
+        const movie = await controller.registerMovie(req.body);
+        return res.status(CREATED).json(movie)
+    });
 
 router.post("/:id/rate",
     authenticateMiddleware('jwt', ['User']),
@@ -39,16 +40,4 @@ router.post("/:id/rate",
         return res.status(OK).json(rating)
     });
 
-// router.put("/:id", async (req, res) => {
-//     const controller = new MovieController();
-//     const user = await controller.updateUser(parseInt(req.params.id), req.body);
-//     return res.status(OK).json(user)
-// });
-//
-// router.delete("/:id", async (req, res) => {
-//     const controller = new MovieController();
-//     await controller.deleteUser(parseInt(req.params.id));
-//     return res.status(OK)
-// });
-//
 export default router;
